v.111129
- Allow guide trees with no branch lengths. Default branch length is 0.1;
  use -fixedbranches=# to change.


v.111013
- first update in Google Code


v.101018
- last version before migration to Google Code